# controllers/customerController.js
@@ -1,24 +1,44 @@
 const Customer = require('../models/customer');
 const Utils = require('../utils')
 const Sex = require('../models/sex');
+const jwt = require('jsonwebtoken');
+
 // const { sendScheduledEmail } = require('./emailController');
 
 // Create a new customer
 exports.createCustomer = async (req, res) => {
-    const {} = req.body;
-    const {  name,password } = req.body;
-    try {
-        const appointment = new Customer({
-            name,password 
+        const {  name,password,email } = req.body;
+        try {
+          const expense = new Customer({
           });
-      
-          appointment.password = Utils.encryptPassword(customer.password);
-        const savedCustomer = await appointment.save();
-        res.status(201).json(savedCustomer);
+          expense.name=name;
+          expense.email=email;
+          expense.password=Utils.encryptPassword(password);
+          console.log(expense);
+
+          const savedExpense = await expense.save();
+          res.status(201).json(savedExpense);
     } catch (error) {
         res.status(500).json({ error: error.message });
     }
 };
+
+
+// Token handler
+exports.getUserConnected = async (req, res) => {
+    res.setHeader("Access-Control-Allow-Origin", "*");
+    const token = req.header("Authorization");
+    if (!token) return res.status(401).json({ error: "Access denied" });
+    try {
+      const decoded = jwt.verify(token, "your-secret-key");
+      req.userId = decoded.userId;
+      res.status(200).json({ userId:   decoded.userId });
+
+      
+    } catch (error) {
+      res.status(401).json({ error: "Invalid token" });
+    }
+  }
 
 // Get all customers
 exports.getAllCustomer = async (req, res) => {
@@ -48,16 +68,17 @@ exports.authentication = async (req, res) => {
         })
         .populate('sex');
         if(customer != null){
-            res.json(customer);
+            const token = jwt.sign({ userId: customer._id }, 'your-secret-key', {
+                expiresIn: '15h',
+                });
+                res.setHeader('Authorization',token);
+                console.log(token);
+                res.status(200).json({ token,userId: customer._id  });
         }
         else{
             throw new Error("Compte introuvable");
         }
-        const token = jwt.sign({ userId: customer._id }, 'your-secret-key', {
-            expiresIn: '1h',
-            });
-            console.log(token);
-            res.status(200).json({token});
+       
     } catch (error) {
         res.status(500).json({ error: error.message });
     }
